--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <title>Document</title>
   </head>
   <body>
+    <nav>
+        <ul>
+            <li><h2>Distrito 13</h2></li>
+            <li><img src="img/fireflies.png" alt=""></li>
+        </ul>
+    </nav>
     <div class="fondo">
       <header>
         <div class="card">
